--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <ol>
     <li><a href="animation.html">Animacion del sol simple</a></li>
     <li><a href="animationCurva.html">Animacion del sol en curva</a></li>
+    <li><a href="animationGame.html">Juego v1</a></li>
   </ol>
 </body>
 </html>
